--- a/css/simple_new.css
+++ b/css/simple_new.css
@@ -103,11 +103,11 @@ div.footer {
 
 a {
 	text-decoration: none; 
-	color: black;
+	color: #AA0000;
 }
 
 a:hover {
-	background-color: #F0EAEA;
+	background-color: #E0EAEA;
 	color: black;
 }
 
